--- a/public/dashboard.css
+++ b/public/dashboard.css
@@ -100,7 +100,31 @@ header nav .logo_ul ul li a:hover{
 
 header nav .search_user{
     position: relative;
+    padding: 20px 50px 0px 50px;
+    display: relative;
+    align-items: center;
+    justify-content: center;
 }
+
+header nav .search_user input{
+    position: relative;
+    padding: 20px 50px 0px 50px;
+    display: relative;
+    align-items: center;
+    justify-content: center;
+}
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
