--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -2,7 +2,7 @@
 
 <header>
   <!-- video -->
-  <video src="/static/video/Money.webm" autoplay muted></video>
+  <video src="/static/video/Money.webm" autoplay muted id="moneyVideo"></video>
 
 
   <!-- nav -->
