--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,41 +1,8 @@
 <%-include('dash-header') -%>
 
-<header>
-  <!-- video -->
-  <video src="/static/video/Money.webm" autoplay muted id="moneyVideo"></video>
-
-
-  <!-- nav -->
-  <nav>
-<div class="logo_ul">
-  <img src="/static/assets/mylogo.ico" alt="">
-  <ul>
-    <li>
-      <a href="#">Home</a>
-    </li>
-    <li>
-      <a href="#">Series</a>
-    </li>
-    <li>
-      <a href="#">Movies</a>
-    </li>
-    <li>
-      <a href="#">Profile</a>
-    </li>
-  </ul>
-</div>
-
-<div class="search-user">
-
-  <input type="text" placeholder="Search..." id="search_input">
-  <img src="" alt="">
-</div>
-  </nav>
-
-</header>
-
-
-<br>
+<main>
+  
+</main>
 
     <!-- <div class="text-center center-div mt-5" id="login">
 
