--- a/public/dashboard.css
+++ b/public/dashboard.css
@@ -1,135 +1,59 @@
 @import url('https://fonts.googleapis.com/css2?family=Maven+Pro&family=Nunito:wght@200&family=Playfair+Display:wght@400;600&family=Poppins:wght@100;300;400;500;600;700&family=Roboto:ital,wght@0,300;0,400;1,300&family=Slabo+27px&display=swap');
 
 *{
-    padding: 0%;
-    margin: 0%;
     box-sizing: border-box;
 }
 
 body{
-    font-family: 'Roboto', sans-serif;
-    width: 100%;
-    height: 100vh;
-    background: #23242b;
-    color: white;
-    font-weight: 600;
+    background-color: #23242b;
+    font-family: "Roboto", sans-serif;
+    margin: 0;
+}
+
+main{
     display: flex;
-    align-items: center;
-    justify-content: center;
+    flex-wrap: wrap;
 }
 
-header{
-    position: relative;
-    width: 80%;
-    height: 90%;
-    border: 1px solid white;
-    border-radius: 20px;
-    overflow: hidden;
-    box-shadow: 0px 0px 25px -1px #f92b73;
+.movie{
+    width: 300px;
+    border-radius: 3px;
+    box-shadow: 0 4px 5px rgb(0, 0, 0, 0.2);
+    margin: 1rem;
+    background-color: #526d5bd8;
 }
 
-header::before{
-    content: '';
-    position: absolute;
+.movie img{
     width: 100%;
-    height: 100%;
-    background: url(/static/assets/money1.JPG)no-repeat center center/cover;
-    opacity: .6;
-    z-index: -1;
 }
 
-header::after{
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(180deg, transparent, #000);
-    z-index: -1;
-}
-
-header video{
-    position: absolute;
-    background: linear-gradient(180deg, transparent, #000);
-    z-index: -1;
-
-}
-
-header nav{
-    width: 100%;
-    height: 10%;
-    border: 1px solid #fff;
+.movie-info{
+    color: #eee;
     display: flex;
-    align-items: center;
     justify-content: space-between;
-    padding: 20px 50px 0px 50px;
-}
-
-header nav .logo_ul{
-    display: flex;
     align-items: center;
-    justify-content: center;
+    padding: 0.5rem 1rem .5rem;
+    letter-spacing: 1px;
+    font-weight: 600;
+
 }
 
-header nav .logo_ul img {
-    width: 90px;
+.movie-info h3{
+    margin: 0;
 }
 
-header nav .logo_ul ul {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    list-style: none;
-}
-
-header nav .logo_ul ul li{
-    padding: 3px 15px;
-}
-
-header nav .logo_ul ul li a{
-    text-decoration: none;
-    color: #ffff;
-    font-size: 16px;
-    font-weight: bold;
-    transition: .3s linear;
-}
-
-header nav .logo_ul ul li a:hover{
-    color: #f92b73;
-    text-shadow: 1px 1px white;
-}
-
-header nav .search_user{
-    position: relative;
-    padding: 20px 50px 0px 50px;
-    display: relative;
-    align-items: center;
-    justify-content: center;
-}
-
-header nav .search_user input{
-    position: relative;
-    padding: 20px 50px 0px 50px;
-    display: relative;
-    align-items: center;
-    justify-content: center;
+.movie-info span{
+    color: #eee;
+    background-color: #b52155de;
+    border-radius: 3px;
+    padding: 0.25rem 0.5rem;
 }
 
 
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-.center-div{
+/* .center-div{
     padding-top: 10%;
 }
 
@@ -143,4 +67,4 @@ form{
 
 .label{
     font-size: .8em;
-}
+} */
