--- a/public/dashboard.css
+++ b/public/dashboard.css
@@ -10,6 +10,69 @@ body{
     margin: 0;
 }
 
+
+header{
+    background-color: #2f303f;
+    padding: 1rem 3rem;
+    display: flex;
+   
+}
+
+header ul{
+    display: flex;
+    align-items: center;
+}
+
+
+header ul li{
+    list-style: none;
+    display: flex;
+    justify-content: space-between;
+    margin: 0 10%;
+}
+
+header h5{
+    color: #eee;
+    display: flex;
+    justify-content: flex-start;
+}
+
+header a{
+    text-decoration: none;
+    color: #eee;
+    border: solid 1px white;
+    border-radius: 10px;
+    padding: 5px 10px;
+}
+
+header a:hover{
+    color: black;
+    background-color: orange;
+    border: 1px solid black;
+}
+
+
+.search{
+    border-radius: 50px;
+    padding: 0.5rem 1rem;
+    outline: none;
+    border: solid 1px black;
+    background-color: transparent;
+    font-size: 1rem;
+ /* justify-content: flex-end; */
+}
+
+.search::placeholder{
+    color: white;
+}
+
+
+.search:focus{
+    outline: none;
+    background-color: #57586d;
+    color: #eee;
+}
+
 main{
     display: flex;
     flex-wrap: wrap;
@@ -20,7 +83,8 @@ main{
     border-radius: 3px;
     box-shadow: 0 4px 5px rgb(0, 0, 0, 0.2);
     margin: 1rem;
-    background-color: #526d5bd8;
+    background-color: #2f303f;
+    overflow: hidden;
 }
 
 .movie img{
@@ -34,7 +98,7 @@ main{
     align-items: center;
     padding: 0.5rem 1rem .5rem;
     letter-spacing: 1px;
-    font-weight: 600;
+    /* font-weight: 600; */
 
 }
 
@@ -44,11 +108,22 @@ main{
 
 .movie-info span{
     color: #eee;
-    background-color: #b52155de;
+    background-color: #1d1e29;
     border-radius: 3px;
+    font-weight: bold;
     padding: 0.25rem 0.5rem;
 }
 
+.movie-info span.green{
+color: rgb(30, 147, 30);
+}
+.movie-info span.orange{
+    color: orange;
+
+}
+.movie-info span.red{
+color: red;
+}
 
 
 
