--- a/public/dashboard.css
+++ b/public/dashboard.css
@@ -56,9 +56,10 @@ header a:hover{
     border-radius: 50px;
     padding: 0.5rem 1rem;
     outline: none;
-    border: solid 1px black;
+    border: solid 2px black;
     background-color: transparent;
     font-size: 1rem;
+    color: #fff;
  /* justify-content: flex-end; */
 }
 
@@ -85,6 +86,7 @@ main{
     margin: 1rem;
     background-color: #2f303f;
     overflow: hidden;
+    position: relative;
 }
 
 .movie img{
@@ -97,7 +99,7 @@ main{
     justify-content: space-between;
     align-items: center;
     padding: 0.5rem 1rem .5rem;
-    letter-spacing: 1px;
+    letter-spacing: 0.5px;
     /* font-weight: 600; */
 
 }
@@ -126,6 +128,27 @@ color: red;
 }
 
 
+/* Overview */
+.overview {
+    background-color: #fff;
+    padding: 2rem;
+    position: absolute;
+    max-height: 100%;
+    overflow: auto;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    transform: translateY(101%);
+    transition: transform 0.3s ease-in;
+}
+
+.overview h3 {
+    margin-top: 0;
+}
+
+.movie:hover .overview {
+    transform: translateY(0);
+}
 
 
 /* .center-div{
