--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -2,11 +2,14 @@
 <header>
   <ul>
     <li>
-  <h5><%= locals.user?user:'No email found'  %></h5>
+  <h5>PROFILE: <%= locals.user?user:'No email found'  %></h5>
     </li>
     <li>
-      <form action="" id="form"></form>
-  <input type="text" id="search" placeholder="Search..." class="search">
+      <form id="form"></form>
+  <input 
+  type="text" 
+  id="search" 
+  placeholder="Search..." class="search">
 </li>
 <li>
   <a href="/logout">Logout</a>
@@ -14,7 +17,7 @@
 </ul>
 </header>
 
-<main>
+<main id="main">
   
 </main>
 
