--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -18,6 +18,11 @@
   </ul>
   </header>
 
+<div class="container">
+      <video loop src="/static/video/Money.webm" autoplay muted></video>
+      
+    </div>
+
   <main id="main">
     
   </main>
