--- a/public/dashboard.css
+++ b/public/dashboard.css
@@ -65,6 +65,9 @@ header ul li a{
     margin-right: -100px;
 }
 
+
+    /* search bar */
+
 .search{
     border-radius: 50px;
     padding: 0.5rem 1rem;
@@ -92,6 +95,8 @@ main{
     flex-wrap: wrap;
 }
 
+    /* the movies api */
+
 .movie{
     width: 300px;
     border-radius: 3px;
@@ -100,6 +105,7 @@ main{
     background-color: #2f303f;
     overflow: hidden;
     position: relative;
+    cursor: pointer;
 }
 
 .movie img{
@@ -140,8 +146,22 @@ color: rgb(30, 147, 30);
 color: red;
 }
 
+    /* for the background video */
 
-/* Overview */
+div .container{
+    border: 1px black solid;
+
+}
+
+div .container video{
+    max-width: 100%;
+    height: auto;
+    position: absolute;
+    background: linear-gradient(180deg, transparent, #000);
+    z-index: -1;
+}
+
+    /* Overview */
 .overview {
     background-color: #fff;
     padding: 2rem;
