--- a/public/dashboard.css
+++ b/public/dashboard.css
@@ -11,6 +11,54 @@ body{
 }
 
 
+/* navbar - bootstrap*/
+
+nav{
+    height: 80px;
+    background-color: #2f303f;
+    border-bottom: 8px solid #57586d;
+    font-size: larger;
+}
+nav div a .imglogo{
+    margin: 5px 0% 5px 60px;
+    height: 100px;
+    width: 100px;
+    cursor: pointer;
+}
+
+nav .container-fluid .collapse ul{
+padding: 0% 30px;
+color: white;
+
+}
+
+nav .container-fluid .collapse ul li a{
+    padding: 0% 20px;
+    color: white;
+    
+    }
+
+    nav .container-fluid .collapse ul li a{
+        padding: 0% 20px;
+        color: white;
+        
+        }
+
+        nav .container-fluid .collapse ul .dropdown-menu{
+            padding: 0% 20px;
+            color: white;
+            background-color: #23242b;
+            padding: 20px;
+            }
+
+            nav .container-fluid .collapse ul .dropdown-menu a:hover{
+                background-color: #57586d;
+            }
+
+            /* END OF NAVBAR */
+
+            /* HEADER */
+
 header{
     background-color: #2f303f;
     padding: 1rem 3rem;
@@ -65,26 +113,27 @@ header ul li a{
     margin-right: -100px;
 }
 
+/* END OF HEADER */
+
 
     /* search bar */
 
-.search{
+#search{
     border-radius: 50px;
     padding: 0.5rem 1rem;
     outline: none;
-    border: solid 2px black;
     background-color: transparent;
     font-size: 1rem;
     color: #fff;
  /* justify-content: flex-end; */
 }
 
-.search::placeholder{
+#search::placeholder{
     color: white;
 }
 
 
-.search:focus{
+#search:focus{
     outline: none;
     background-color: #57586d;
     color: #eee;
@@ -199,3 +248,10 @@ form{
 .label{
     font-size: .8em;
 } */
+
+
+/* media */
+
+@media screen and (max-width: 600px){
+    
+}
