--- a/views/login.ejs
+++ b/views/login.ejs
@@ -33,7 +33,7 @@
         />
       </div>
 
-      <button type="submit" class="btn">Submit</button>
+      <button type="submit" class="btn">Sign In</button>
       <div class="links">
         <a href="\">Forget Password</a>
         <a href="#">Sign In</a>
